Updated main.ts with examples.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
   "keywords": [
     "typescript",
     "typing",
-    "multystring"
+    "multystring",
+    "typing-effect",
+    "browser",
+    "visual-effect",
+    "frontend",
+    "customizable"
   ],
   "author": "Yaroslav Dernov",
   "license": "ISC",
