--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "typing-effect",
   "version": "1.0.0",
-  "description": "A TypeScript package that provides the ability to create a typing effect with one or multiple strings.",
+  "description": "A small TypeScript package that provides the ability to create a typing effect with one or multiple strings.",
   "types": "./dist/index.d.ts",
   "main": "./dist/index.js",
   "type": "module",
@@ -22,7 +22,8 @@
     "browser",
     "visual-effect",
     "frontend",
-    "customizable"
+    "customizable",
+    "ui"
   ],
   "author": "Yaroslav Dernov",
   "license": "ISC",
