--- a/.github/workflows/update-on-release.yml
+++ b/.github/workflows/update-on-release.yml
@@ -13,6 +13,16 @@ jobs:
 
     - name: Update package.json version
       run: |
-         echo "Tag name from GITHUB_REF_NAME: $GITHUB_REF_NAME"
+        VERSION=${GITHUB_REF_NAME#v} # Remove the 'v' prefix
+        echo "New version: $VERSION"
+        sed -i "s/\"version\": \".*\"/\"version\": \"$VERSION\"/" package.json
+
+    - name: Commit and push changes
+      run: |
+        git config --global user.name 'GitHub Actions'
+        git config --global user.email 'actions@github.com'
+        git add package.json
+        git commit -m "Update package.json version to $VERSION"
+        git push
 
    
