--- a/.github/workflows/update-on-release.yml
+++ b/.github/workflows/update-on-release.yml
@@ -10,16 +10,23 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+          fetch-depth: 0
 
     - name: Update package.json version
       run: |
-        git checkout
         VERSION=${GITHUB_REF_NAME#v} # Remove the 'v' prefix
         echo "New version: $VERSION"
         sed -i "s/\"version\": \".*\"/\"version\": \"$VERSION\"/" package.json
 
     - name: Commit and push changes
       run: |
+        raw=$(git branch -r --contains ${{ github.ref }})
+        BRANCH=${raw##*/}
+        
+        echo "Branch is $BRANCH."
+          
+        git checkout $BRANCH
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
         git add package.json
