--- a/.github/workflows/update-on-release.yml
+++ b/.github/workflows/update-on-release.yml
@@ -14,10 +14,12 @@ jobs:
           fetch-depth: 0
 
     - name: Update package.json version
+      id: extract_version
       run: |
         VERSION=${GITHUB_REF_NAME#v} # Remove the 'v' prefix
         echo "New version: $VERSION"
         sed -i "s/\"version\": \".*\"/\"version\": \"$VERSION\"/" package.json
+        echo "version=$VERSION" >> $GITHUB_OUTPUT
 
     - name: Commit and push changes
       run: |
@@ -31,10 +33,10 @@ jobs:
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
         git add package.json
-        git commit -m "Update package.json version to $VERSION in branch $BRANCH"
+        git commit -m "Update package.json version to ${{ steps.extract_version.outputs.version }} in branch $BRANCH"
         COMMIT_HASH=$(git rev-parse HEAD)
         git tag -f $GITHUB_REF_NAME $COMMIT_HASH
-        git push --atomic origin $BRANCH $GITHUB_REF_NAME
+        git push --atomic origin $BRANCH $GITHUB_REF_NAME --force
 
         echo "Tag $GITHUB_REF_NAME was linked to a new commit $COMMIT_HASH"
 
