--- a/.github/workflows/update-on-release.yml
+++ b/.github/workflows/update-on-release.yml
@@ -21,6 +21,11 @@ jobs:
         sed -i "s/\"version\": \".*\"/\"version\": \"$VERSION\"/" package.json
         echo "version=$VERSION" >> $GITHUB_OUTPUT
 
+    - uses: actions/setup-node@v4
+      with:
+       node-version: 20
+    - run: npm ci
+
     - name: Commit and push changes
       run: |
         raw=$(git branch -r --contains ${{ github.ref }})
@@ -32,6 +37,7 @@ jobs:
           
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
+        git add package-lock.json
         git add package.json
         git commit -m "Update package.json version to ${{ steps.extract_version.outputs.version }} in branch $BRANCH"
         COMMIT_HASH=$(git rev-parse HEAD)
