--- a/.github/workflows/update-on-release.yml
+++ b/.github/workflows/update-on-release.yml
@@ -24,7 +24,7 @@ jobs:
     - uses: actions/setup-node@v4
       with:
        node-version: 20
-    - run: npm ci
+    - run: npm i
 
     - name: Commit and push changes
       run: |
@@ -35,8 +35,8 @@ jobs:
         echo "Branch is $BRANCH"
         echo "Tag $GITHUB_REF_NAME was originaly added to commit $(git rev-parse HEAD)"
           
-        git config user.name "github-actions[bot]"
-        git config user.email "github-actions[bot]@users.noreply.github.com"
+        git config user.name "github-actions"
+        git config user.email "github-actions@users.noreply.github.com"
         git add package-lock.json
         git add package.json
         git commit -m "Update package.json version to ${{ steps.extract_version.outputs.version }} in branch $BRANCH"
