--- a/.github/workflows/update-on-release.yml
+++ b/.github/workflows/update-on-release.yml
@@ -34,9 +34,11 @@ jobs:
         
         echo "Branch is $BRANCH"
         echo "Tag $GITHUB_REF_NAME was originaly added to commit $(git rev-parse HEAD)"
-          
-        git config user.name "github-actions"
-        git config user.email "github-actions@users.noreply.github.com"
+
+        
+        git config --list
+        
+        
         git add package-lock.json
         git add package.json
         git commit -m "Update package.json version to ${{ steps.extract_version.outputs.version }} in branch $BRANCH"
