--- a/.github/workflows/update-on-release.yml
+++ b/.github/workflows/update-on-release.yml
@@ -35,7 +35,8 @@ jobs:
         echo "Branch is $BRANCH"
         echo "Tag $GITHUB_REF_NAME was originaly added to commit $(git rev-parse HEAD)"
 
-        
+        git config user.name github-actions
+        git config user.email github-actions@github.com
         
         git add package-lock.json
         git add package.json
