--- a/.github/workflows/update-on-release.yml
+++ b/.github/workflows/update-on-release.yml
@@ -36,11 +36,11 @@ jobs:
         echo "Tag $GITHUB_REF_NAME was originaly added to commit $(git rev-parse HEAD)"
 
         git config user.name github-actions[bot]
-        git config user.email github-actions@users.noreply.github.com
+        git config user.email github-actions[bot]@users.noreply.github.com
         
         git add package-lock.json
         git add package.json
-        git commit -m "Update package.json version to ${{ steps.extract_version.outputs.version }} in branch $BRANCH"
+        git commit -S -m "Update package.json version to ${{ steps.extract_version.outputs.version }} in branch $BRANCH"
         COMMIT_HASH=$(git rev-parse HEAD)
         git tag -f $GITHUB_REF_NAME $COMMIT_HASH
         git push --atomic origin $BRANCH $GITHUB_REF_NAME --force
