--- a/.github/workflows/update-on-release.yml
+++ b/.github/workflows/update-on-release.yml
@@ -40,7 +40,7 @@ jobs:
         
         git add package-lock.json
         git add package.json
-        git commit -S -m "Update package.json version to ${{ steps.extract_version.outputs.version }} in branch $BRANCH"
+        git commit -m "Update package.json version to ${{ steps.extract_version.outputs.version }} in branch $BRANCH"
         COMMIT_HASH=$(git rev-parse HEAD)
         git tag -f $GITHUB_REF_NAME $COMMIT_HASH
         git push --atomic origin $BRANCH $GITHUB_REF_NAME --force
