--- a/.github/workflows/update-on-release.yml
+++ b/.github/workflows/update-on-release.yml
@@ -32,16 +32,15 @@ jobs:
         BRANCH=${raw##*/}
         git checkout $BRANCH
         
-        echo "Branch is $BRANCH"
         echo "Tag $GITHUB_REF_NAME was originaly added to commit $(git rev-parse HEAD)"
 
-        git config user.name github-actions[bot]
-        git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+        git config user.name "github-actions[bot]"
+        git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
         
-        git add package-lock.json
-        git add package.json
+        git add package-lock.json package.json
         git commit -m "Update package.json version to ${{ steps.extract_version.outputs.version }} in branch $BRANCH"
         COMMIT_HASH=$(git rev-parse HEAD)
+        
         git tag -f $GITHUB_REF_NAME $COMMIT_HASH
         git push --atomic origin $BRANCH $GITHUB_REF_NAME --force
 
