--- a/.github/workflows/update-on-release.yml
+++ b/.github/workflows/update-on-release.yml
@@ -38,7 +38,7 @@ jobs:
         git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
         
         git add package-lock.json package.json
-        git commit -m "Update package.json version to ${{ steps.extract_version.outputs.version }} in branch $BRANCH"
+        git commit -a -m "Update package.json version to ${{ steps.extract_version.outputs.version }} in branch $BRANCH"
         COMMIT_HASH=$(git rev-parse HEAD)
         
         git tag -f $GITHUB_REF_NAME $COMMIT_HASH
