--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "typing-effect-ts",
   "version": "1.1.24-test",
   "description": "A small TypeScript package that provides the ability to create a typing effect with one or multiple strings.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ydernov/typing-effect.git"
+  },
   "types": "./dist/index.d.ts",
   "main": "./dist/index.js",
   "type": "module",
