--- a/.github/workflows/set-version-to-tag.yml
+++ b/.github/workflows/set-version-to-tag.yml
@@ -1,15 +1,15 @@
 name: Update Version in package.json on Release
 
-on:
- release:
-    types: [published]
+on: workflow_call
     
 jobs:
  update-version:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+    - if: ${{ GITHUB_REF_TYPE != 'tag' }}
+      run: echo "::error::The workflow must be triggered on a tag ref" && exit 1
+      
+    - uses: actions/checkout@v4
       with:
           fetch-depth: 0
 
