--- a/.github/workflows/set-version-to-tag.yml
+++ b/.github/workflows/set-version-to-tag.yml
@@ -9,30 +9,12 @@ on:
       ref_name:
         required: true
         type: string
-      ref-name:
-        required: true
-        type: string
-        
     
 jobs:
   update-version:
     runs-on: ubuntu-latest
     steps:
-      - name: check inputs
-        run: |
-          echo "ref ${{ inputs.ref }}"
-          echo "ref_name ${{ inputs.ref_name }}"
-          echo "ref-name ${{ inputs.ref-name }}"
-          echo " ${{ !startsWith( inputs.ref, 'refs/tags/' ) }}"
-          echo " ${{ !startsWith(inputs.ref, 'refs/tags/') }}"
-          echo " ${{ startsWith(inputs.ref, 'refs/tags/') }}"
-          echo " ${{ startsWith(inputs.ref, 'refs/tags/') }}"
-          echo " ${{ ! startsWith(inputs.ref, 'refs/tags/') }}"
-
-          echo "!startsWith(inputs.ref, 'refs/tags/')"
-
-      
-      - if: "!startsWith(inputs.ref, 'refs/tags/')"
+      - if: startsWith(inputs.ref, 'refs/tags/') != true
         run: echo "::error::The workflow must be triggered on a tag ref" && exit 1
       
       - uses: actions/checkout@v4
