--- a/.github/workflows/set-version-to-tag.yml
+++ b/.github/workflows/set-version-to-tag.yml
@@ -13,25 +13,9 @@ on:
 jobs:
   update-version:
     runs-on: ubuntu-latest
-    steps:
-    
-      - if: startsWith(inputs.ref, 'refs/tags/')
-        run: echo "1 ${{ inputs.ref }} starts with refs/tags"
-
-      - if: startsWith(inputs.ref, 'refs/tags/') != true
-        run: echo "2 ${{ inputs.ref }} doesn't start with refs/tags"
-      
-      - if: ${{ !startsWith(inputs.ref, 'refs/tags/') }}
-        run: echo "3 ${{ inputs.ref }} doesn't start with refs/tags"
-        
-      - if: ${{ startsWith(inputs.ref, 'refs/tags/') != true }}
-        run: echo "4 ${{ inputs.ref }} doesn't start with refs/tags"
-
-      - if: startsWith(inputs.ref_name, 'v')
-        run: echo "${{ inputs.ref_name }} starts with v"
-
-        
-      - if: startsWith(inputs.ref, 'refs/tags/') != true
+    steps:    
+      - name: Check that ref is a tag
+        if: ${{ !startsWith(inputs.ref, 'refs/tags/') != true }}
         run: echo "::error::The workflow must be triggered on a tag ref" && exit 1
       
       - uses: actions/checkout@v4
@@ -41,7 +25,7 @@ jobs:
       - name: Update package.json version
         id: extract_version
         run: |
-          VERSION=${inputs.ref_name#v} # Remove the 'v' prefix
+          VERSION=${{inputs.ref_name#v}} # Remove the 'v' prefix
           echo "New version: $VERSION"
           sed -i "s/\"version\": \".*\"/\"version\": \"$VERSION\"/" package.json
           echo "version=$VERSION" >> $GITHUB_OUTPUT
