--- a/.github/workflows/publish-to-github-packages.yml
+++ b/.github/workflows/publish-to-github-packages.yml
@@ -1,12 +1,19 @@
 name: Publish package to GitHub Packages
 
-on: workflow_call
+on: 
+  workflow_call:
+    inputs:
+      ref:
+        required: true
+        type: string
 
 jobs:
   triage:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        ref: inputs.ref
     - uses: actions/setup-node@v4
       with:
         node-version: '20'
