--- a/.github/workflows/coverage-and-badge.yml
+++ b/.github/workflows/coverage-and-badge.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           node-version: 20
           
-      - run: npm сi
+      - run: npm ci
 
       - run: npm run coverage
 
