--- a/.github/workflows/coverage-and-badge.yml
+++ b/.github/workflows/coverage-and-badge.yml
@@ -34,13 +34,16 @@ jobs:
       - name: Create badge config
         run: |
           cd coverage
-          cat coverage-summary.json | jq '
-          { "0": "red", "50": "orange", "60": "yellow", "70": "yellowgreen", "80": "green", "90": "brightgreen" } as $ranges 
-          | ([.total.["lines", "statements", "functions", "branches"].pct] | add / length) as $tp 
-          | ($ranges | keys | map(select( . <= ($tp | tostring)))[-1]) as $ckey 
-          | {schemaVersion: "1", label: "Coverage", message: ($tp | tostring + "%"), color: $ranges[$ckey] }
-          ' > badge.json
-          
+          # cat coverage-summary.json | jq '
+          # { "0": "red", "50": "orange", "60": "yellow", "70": "yellowgreen", "80": "green", "90": "brightgreen" } as $ranges 
+          # | ([.total.["lines", "statements", "functions", "branches"].pct] | add / length) as $tp 
+          # | ($ranges | keys | map(select( . <= ($tp | tostring)))[-1]) as $ckey 
+          # | {schemaVersion: "1", label: "Coverage", message: ($tp | tostring + "%"), color: $ranges[$ckey] }
+          # ' > badge.json
+
+          cat coverage-summary.json | jq '{ "0": "red", "50": "orange", "60": "yellow", "70": "yellowgreen", "80": "green", "90": "brightgreen" } as $ranges | ([.total.["lines", "statements", "functions", "branches"].pct] | add / length) as $tp | ($ranges | keys | map(select( . <= ($tp | tostring)))[-1]) as $ckey | {schemaVersion: "1", label: "Coverage", message: ($tp | tostring + "%"), color: $ranges[$ckey] }' > badge.json
+
+      
       - name: Move coverage contents into ${{ env.PAGES_TARGET }}
         run: |
           TARGET_DIR="${{ env.PAGES_TARGET }}"
@@ -58,6 +61,15 @@ jobs:
           git commit -m "Run coverage and created badge for ${{ env.PAGES_TARGET }}"
           
           git push --atomic origin gh-pages
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: artifacts
+          path: artifacts
+          if-no-files-found: error
+          retention-days: 1
 
           
 
