--- a/.github/workflows/coverage-and-badge.yml
+++ b/.github/workflows/coverage-and-badge.yml
@@ -38,34 +38,40 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const summary = require("./coverage-summary.json");
-            const coverageKeys = ["lines", "statements", "functions", "branches"];
-            const colorRanges = {
-              0: "red",
-              50: "orange",
-              60: "yellow",
-              70: "yellowgreen",
-              80: "green",
-              90: "brightgreen",
-            };
+            try {
+              const fs = require('fs');
+              const summary = fs.readFileSync('./coverage-summary.json');
+              const coverageKeys = ["lines", "statements", "functions", "branches"];
+              const colorRanges = {
+                0: "red",
+                50: "orange",
+                60: "yellow",
+                70: "yellowgreen",
+                80: "green",
+                90: "brightgreen",
+              };
             
-            const totalObj = JSON.parse(summary).total;
-            const total =
-              coverageKeys.reduce((prev, key) => prev + totalObj[key]?.pct || 0, 0) /
-              coverageKeys.length;
+              const totalObj = JSON.parse(summary).total;
+              const total =
+                coverageKeys.reduce((prev, key) => prev + totalObj[key]?.pct || 0, 0) /
+                coverageKeys.length;
+                
+              const colorKey = (
+                Object.keys(colorRanges)
+                  .filter((key) => Number(key) <= total)
+                  .pop() || 0
+              ).toString();
 
-            const colorKey = (
-              Object.keys(colorRanges)
-                .filter((key) => Number(key) <= total)
-                .pop() || 0
-            ).toString();
-
-            return {
-              schemaVersion: "1",
-              label: "Coverage",
-              message: total + "%",
-              color: colorRanges[colorKey],
-            };
+              return {
+                schemaVersion: "1",
+                label: "Coverage",
+                message: total + "%",
+                color: colorRanges[colorKey],
+              };
+            } catch(err) {
+              core.error("Error while creating JSON for coverage badge")
+              core.setFailed(err)
+            } 
 
       - name: Write config to badge.json 
         run: echo "${{steps.create-badge-config.outputs.result}}" > badge.json
