--- a/.github/workflows/coverage-and-badge.yml
+++ b/.github/workflows/coverage-and-badge.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           script: |
             try {
-              console.log("__dirname", __dirname);
+              // console.log("__dirname", __dirname);
               console.log("process.cwd()", process.cwd());
               const path = require('path');
 
