--- a/.github/workflows/coverage-and-badge.yml
+++ b/.github/workflows/coverage-and-badge.yml
@@ -73,18 +73,30 @@ jobs:
         run: |
           cd coverage
           echo "${{steps.create-badge-config.outputs.result}}" > badge.json
+          echo 'Current directory'
+          pwd
+          echo 'Current directory contents'
           ls
       
       - name: Move coverage contents into ${{ env.PAGES_TARGET }}
         run: |
           TARGET_DIR="${{ env.PAGES_TARGET }}"
           find . -mindepth 1 -maxdepth 1 ! -name "$TARGET_DIR" -exec mv {} "$TARGET_DIR" \;
+          echo 'Current directory'
+          pwd
+          echo 'Current directory contents'
           ls
           
       - name: Commit and push changes
         run: |
+          lecho 'Current directory'
+          pwd
+          echo 'Current directory contents'
           ls
           cd ../
+          echo 'Current directory'
+          pwd
+          echo 'Current directory contents'
           ls
           git remote -v
           git fetch origin gh-pages
