--- a/.github/workflows/coverage-and-badge.yml
+++ b/.github/workflows/coverage-and-badge.yml
@@ -73,19 +73,18 @@ jobs:
         run: |
           cd coverage
           echo "${{steps.create-badge-config.outputs.result}}" > badge.json
-          echo 'Current directory'
-          pwd
-          echo 'Current directory contents'
-          ls
       
       - name: Move coverage contents into ${{ env.PAGES_TARGET }}
         run: |
+          cd coverage
+          TARGET_DIR="${{ env.PAGES_TARGET }}"
+          mkdir "$TARGET_DIR"
+          find . -mindepth 1 -maxdepth 1 ! -name "$TARGET_DIR" -exec mv {} "$TARGET_DIR" \;
           echo 'Current directory'
           pwd
           echo 'Current directory contents'
           ls
-          TARGET_DIR="${{ env.PAGES_TARGET }}"
-          find . -mindepth 1 -maxdepth 1 ! -name "$TARGET_DIR" -exec mv {} "$TARGET_DIR" \;
+          cd "$TARGET_DIR"
           echo 'Current directory'
           pwd
           echo 'Current directory contents'
@@ -93,15 +92,6 @@ jobs:
           
       - name: Commit and push changes
         run: |
-          lecho 'Current directory'
-          pwd
-          echo 'Current directory contents'
-          ls
-          cd ../
-          echo 'Current directory'
-          pwd
-          echo 'Current directory contents'
-          ls
           git remote -v
           git fetch origin gh-pages
           git reset origin/gh-pages
