--- a/.github/workflows/coverage-and-badge.yml
+++ b/.github/workflows/coverage-and-badge.yml
@@ -92,7 +92,6 @@ jobs:
           
       - name: Commit and push changes
         run: |
-          git remote -v
           git fetch origin gh-pages
           git reset origin/gh-pages
           git checkout gh-pages
@@ -100,7 +99,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           
-          git add coverage
+          git add -f coverage
           git commit -m "Run coverage and created badge for ${{ env.PAGES_TARGET }}"
           git push --atomic origin gh-pages
 
