Update on-release.yml workflow
Added badge and coverage job for release

--- a/.github/workflows/on-release.yml
+++ b/.github/workflows/on-release.yml
@@ -11,7 +11,13 @@ jobs:
     with:
       ref: ${{github.ref}}
       ref_name: ${{github.ref_name}}
-  
+
+  create-and-publish-coverage:
+    needs: set-version-to-tag
+    uses: ./.github/workflows/coverage-and-badge.yml
+    with:
+      ref: ${{github.ref}}
+    
   publish-to-github-packages:
     needs: set-version-to-tag
     uses: ./.github/workflows/publish-to-github-packages.yml
