--- a/.github/workflows/test-tag-commit-change.yml
+++ b/.github/workflows/test-tag-commit-change.yml
@@ -19,8 +19,15 @@ jobs:
 
       - name: Commit and push changes
         run: |
+          gh api \
+            --method PATCH \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            /repos/ydernov/typing-effect/git/refs/tags/v1.2.0 \
+            -f sha='4c998f5a777bcc66bafcda24df324ee3e1081d69' \
+           -F force=true 
 
-          gh release edit 'v1.2.0' --target 4c998f5a777bcc66bafcda24df324ee3e1081d69
+          # gh release edit 'v1.2.0' --target 4c998f5a777bcc66bafcda24df324ee3e1081d69
 
 
    
